update jupyter notebooks after .md conversion

--- a/2018-02-10-Tucson/Python/19-defensive.ipynb
+++ b/2018-02-10-Tucson/Python/19-defensive.ipynb
@@ -4,23 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"Defensive Programming\"\n",
-    "teaching: 10\n",
-    "exercises: 15\n",
-    "questions:\n",
-    "- \"What sorts of things frequently go wrong in programs?\"\n",
-    "- \"How can I make my programs more robust?\"\n",
-    "objectives:\n",
-    "- \"Diagnose corner cases in simple programs.\"\n",
-    "- \"Write assertions with informative messages that test for corner cases in simple programs.\"\n",
-    "keypoints:\n",
-    "- \"Fail early, fail loudly.\"\n",
-    "- \"Can use `if`, `print`, and `sys.exit` to detect and report errors.\"\n",
-    "- \"Use `assert` to check internal correctness.\"\n",
-    "- \"Practice defensive programming.\"\n",
-    "- \"Practice test-driven development.\"\n",
-    "---\n",
+    "Defensive Programming\n",
+    "==\n",
+    "Teaching: 10  \n",
+    "Exercises: 15\n",
+    "\n",
+    "Questions:\n",
+    " * What sorts of things frequently go wrong in programs?\n",
+    " * How can I make my programs more robust?\n",
+    " \n",
+    "Objectives:\n",
+    " * Diagnose corner cases in simple programs.\n",
+    " * Write assertions with informative messages that test for corner cases in simple programs.\n",
+    " \n",
+    "Keypoints:\n",
+    " * Fail early, fail loudly.\n",
+    " * Can use `if`, `print`, and `sys.exit` to detect and report errors.\n",
+    " * Use `assert` to check internal correctness.\n",
+    " * Practice defensive programming.\n",
+    " * Practice test-driven development.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "## Fail early, fail loudly.\n",
     "\n",
     "*   \"All programs are wrong, but some programs are useful.\"\n",
@@ -37,8 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -55,8 +67,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}\n",
-    "\n",
     "*   But it doesn't give the caller a chance to handle the error in a different way.\n",
     "*   And doesn't integrate with graphical user interfaces, web programs,\n",
     "    and other things that might not want you to print.\n",
@@ -74,8 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -89,8 +101,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}\n",
-    "\n",
     "*   Easier to read.\n",
     "*   A standard way to do things\n",
     "    (much better than a dozen libraries each reporting errors in different ways).\n",
@@ -106,8 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def kelvin_to_celsius(k):\n",
@@ -119,8 +131,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}\n",
-    "\n",
     "*   Add assertions when writing code in the first place\n",
     "    to check for errors you have made or seen in the past.\n",
     "\n",
@@ -138,9 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'count_leading_zeros' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-8b1ada6971bc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mcount_leading_zeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mcount_leading_zeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mcount_leading_zeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mcount_leading_zeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mcount_leading_zeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'count_leading_zeros' is not defined"
+     ]
+    }
+   ],
    "source": [
     "assert count_leading_zeros([]) == 0\n",
     "assert count_leading_zeros([0]) == 1\n",
@@ -154,8 +176,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}\n",
-    "\n",
     "> ## Is This Needed?\n",
     ">\n",
     "> The `os` library contains a function called `os.path.exists(path)`\n",
@@ -170,12 +190,16 @@
     "> reader = open(filename, 'r')\n",
     "> ...\n",
     "> ~~~\n",
-    "> {: .source}\n",
+    ">\n",
     ">\n",
     "> Should you adopt this practice?\n",
-    "> Why or why not?\n",
-    "{: .challenge}\n",
-    "\n",
+    "> Why or why not?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## Finding Corner Cases\n",
     ">\n",
     "> 1. Under what circumstances will the following function fail with an error?\n",
@@ -188,47 +212,38 @@
     ">     copy = values[:]\n",
     ">     copy.sort()\n",
     ">     return copy[:2]\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}\n",
-    "\n",
-    "> ## Test-Driven Development.\n",
-    ">\n",
-    "> 1. Explain in simple language what `run_starts` function is supposed to do.\n",
-    "> 2. Fill in the blanks in the function definition so that all of the assertions succeed.\n",
-    "> 3. For what input(s) could different users reasonably expect this \n",
-    ">     function to return different values? I.e., where could reasonable people \n",
-    ">     still disagree about the function's behavior?\n",
-    "> 4. Add one or more assertions to test for each situation identified above.\n",
-    ">\n",
-    "> ~~~\n",
-    "> def run_starts(values):\n",
-    ">\n",
-    ">     if values == []:\n",
-    ">         ____\n",
-    ">\n",
-    ">     result = []\n",
-    ">     previous = values[0] + 1\n",
-    ">     for v in values:\n",
-    ">         if v < previous:\n",
-    ">             ____\n",
-    ">             previous = ____\n",
-    ">\n",
-    ">     return result\n",
-    ">\n",
-    "> assert run_starts([]) == []\n",
-    "> assert run_starts([1]) == [1]\n",
-    "> assert run_starts([1, 2]) == [1]\n",
-    "> assert run_starts([1, 2, 1]) == [1, 1]\n",
-    "> assert run_starts([1, 2, 3, 2, 3]) == [1, 2]\n",
-    "> assert run_starts([2, 3, 4, 0, 5, 7, 4, 6]) == [2, 0, 4]\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}"
+    "> ~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">>### Solution\n",
+    ">>1. If the function is passed anything but a list\n",
+    ">>2. If it passed a list of strings. Strings sort alphabetically. E.g. '600' < '70' < '8'"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
