--- a/2018-02-10-Tucson/Python/20-style.ipynb
+++ b/2018-02-10-Tucson/Python/20-style.ipynb
@@ -4,49 +4,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"Programming Style\"\n",
-    "teaching: 10\n",
-    "exercises: 15\n",
-    "questions:\n",
-    "- \"How can I make my programs more readable?\"\n",
-    "- \"How do most programmers format their code?\"\n",
-    "objectives:\n",
-    "- \"Provide sound justifications for basic rules of coding style.\"\n",
-    "- \"Refactor one-page programs to make them more readable and justify the changes.\"\n",
-    "- \"Use Python community coding standards (PEP-8).\"\n",
-    "keypoints:\n",
-    "- \"Follow standard Python style in your code.\"\n",
-    "- \"Use docstrings to provide online help.\"\n",
-    "---\n",
+    "Programming Style\n",
+    "==\n",
+    "Teaching: 10  \n",
+    "Exercises: 15\n",
+    "\n",
+    "Questions:\n",
+    " * How can I make my programs more readable?\n",
+    " * How do most programmers format their code?\n",
+    "\n",
+    "Objectives:\n",
+    " * Provide sound justifications for basic rules of coding style.\n",
+    " * Refactor one-page programs to make them more readable and justify the changes.\n",
+    " * Use Python community coding standards (PEP-8).\n",
+    " \n",
+    "Keypoints:\n",
+    " * Follow standard Python style in your code.\n",
+    " * Use docstrings to provide online help.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coding style\n",
+    "\n",
+    "Coding style helps us to understand the code better. It helps to maintain and change the code. Python relies strongly on coding style, as we may notice by the indentation we apply to lines to define different blocks of code. Python proposes a standard style through one of its first Python Enhancement Proposals (PEP), PEP8, and highlight the importance of readability in the Zen of Python.\n",
+    "\n",
+    "We may highlight some points:\n",
+    " * document your code\n",
+    " * use clear, meaningful variable names\n",
+    " * use white-space, not tabs, to indent lines\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Follow standard Python style in your code.\n",
     "\n",
     "*   [PEP8](https://www.python.org/dev/peps/pep-0008):\n",
-    "    a style guide for Python that discusses topics such as how you should name variables,\n",
-    "    how you should use indentation in your code,\n",
-    "    how you should structure your `import` statements,\n",
-    "    etc.\n",
-    "    Adhering to PEP8 makes it easier for other Python developers to read and understand your code,\n",
-    "    and to understand what their contributions should look like.\n",
-    "    The [PEP8 application and Python library](https://pypi.python.org/pypi/pep8)\n",
-    "    can check your code for compliance with PEP8.\n",
+    "    a style guide for Python that discusses topics such as how you should name variables, how you should use indentation in your code, how you should structure your `import` statements, etc.  Adhering to PEP8 makes it easier for other Python developers to read and understand your code, and to understand what their contributions should look like.\n",
+    "    The [PEP8 application and Python library](https://pypi.python.org/pypi/pep8) can check your code for compliance with PEP8.\n",
     "\n",
-    "*   [numpydoc](https://github.com/numpy/numpy/blob/master/doc/HOWTO_DOCUMENT.rst.txt):\n",
-    "    a standard for API documentation through docstrings used by NumPy, SciPy,\n",
-    "    and many other Python scientific computing pacakges.\n",
-    "    Adhering to numpydoc helps ensure that users and developers \n",
-    "    will know how to use your Python package,\n",
-    "    either for their own analyses or as a component of their own Python packages.\n",
-    "    If you use numpydoc,\n",
-    "    you can also use existing tools such as [Sphinx](http://sphinx-doc.org/)\n",
-    "    to automatically generate HTML documentation for your API.\n",
+    "* Google style guide on Python supports the use of PEP8 and extend the coding style to more specific structure of a Python code, which may be interesting also to follow.\n",
     "\n",
-    "*   [Semantic Versioning](http://semver.org/):\n",
-    "    a standard describing how to define versions of your software\n",
-    "    no matter what language it's written in.\n",
-    "    Using Semantic Versioning makes it easy for other developers to understand\n",
-    "    what is guaranteed to stay the same and what might change across versions of your software.\n",
+    "## Use assertions to check for internal errors.\n",
     "\n",
+    "Assertions are a simple, but powerful method for making sure that the context in which your code is executing is as you expect.\n",
+    "~~~\n",
+    "def calc_bulk_density(mass, volume):\n",
+    "    '''Return dry bulk density = powder mass / powder volume.'''\n",
+    "    assert volume > 0\n",
+    "    return mass / volume\n",
+    "~~~\n",
+    "If the assertion is False, the Python interpreter raises an AssertionError runtime exception. The source code for the expression that failed will be displayed as part of the error message. To ignore assertions in your code run the interpreter with the ‘-O’ (optimize) switch. Assertions should contain only simple checks and never change the state of the program. For example, an assertion should never contain an assignment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Use docstrings to provide online help.\n",
     "\n",
     "*   If the first thing in a function is a character string\n",
@@ -57,9 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function average in module __main__:\n",
+      "\n",
+      "average(values)\n",
+      "    Return average of values, or None if no values are supplied.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def average(values):\n",
     "    \"Return average of values, or None if no values are supplied.\"\n",
@@ -75,41 +106,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}"
+    "## Multiline Strings\n",
+    "\n",
+    "Often use *multiline strings* for documentation. These start and end with three quote characters (either single or double)and end with three matching characters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This string spans\\nmultiple lines.\\n\\nBlank lines are allowed.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Help on function average in module __main__:\n",
+    "\"\"\"This string spans\n",
+    "multiple lines.\n",
     "\n",
-    "average(values)\n",
-    "    Return average of values, or None if no values are supplied."
+    "Blank lines are allowed.\"\"\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .output}\n",
-    "\n",
-    "> ## Multiline Strings\n",
-    ">\n",
-    "> Often use *multiline strings* for documentation.\n",
-    "> These start and end with three quote characters (either single or double)\n",
-    "> and end with three matching characters.\n",
-    ">\n",
-    "> ~~~\n",
-    "> \"\"\"This string spans\n",
-    "> multiple lines.\n",
-    ">\n",
-    "> Blank lines are allowed.\"\"\"\n",
-    "> ~~~\n",
-    "> {: .python}\n",
-    "{: .callout}\n",
+    "## Exercises\n",
     "\n",
     "> ## What Will Be Shown?\n",
     ">\n",
@@ -134,10 +163,13 @@
     ">\n",
     ">     # Report.\n",
     ">     return highest\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}\n",
-    "\n",
+    "> ~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## Document This\n",
     ">\n",
     "> Turn the comment on the following function into a docstring\n",
@@ -150,10 +182,13 @@
     ">     values = [a, b, c]\n",
     ">     values.sort()\n",
     ">     return values[1]\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}\n",
-    "\n",
+    "> ~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## Clean Up This Code\n",
     ">\n",
     "> 1. Read this short program and try to predict what it does.\n",
@@ -182,39 +217,41 @@
     ">     print(s)\n",
     ">     i += 1\n",
     "> ~~~\n",
-    "> {: .source}\n",
     ">\n",
-    "> Here's one solution.\n",
-    ">\n",
-    "> ~~~\n",
-    "> def string_machine(input_string, iterations):\n",
-    ">     \"\"\"\n",
-    ">     Takes input_string and generates a new string with -'s and *'s\n",
-    ">     corresponding to characters that have identical adjacent characters\n",
-    ">     or not, respectively.  Iterates through this procedure with the resultant\n",
-    ">     strings for the supplied number of iterations.\n",
-    ">     \"\"\"\n",
-    ">     print(input_string)\n",
-    ">     old = input_string\n",
-    ">     for i in range(iterations):\n",
-    ">         new = ''\n",
-    ">         # iterate through characters in previous string\n",
-    ">         for j in range(len(s)):\n",
-    ">             left = j-1\n",
-    ">             right = (j+1)%len(s) # ensure right index wraps around\n",
-    ">             if old[left]==old[right]:\n",
-    ">                 new += '-'\n",
-    ">             else:\n",
-    ">                 new += '*'\n",
-    ">         print(new)\n",
-    ">         # store new string as old\n",
-    ">         old = new\n",
-    ">\n",
-    "> string_machine('et cetera', 10)\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}\n",
-    "\n",
+    ">> ### A Solution (more than one possible)\n",
+    ">>\n",
+    ">> ~~~\n",
+    ">> def string_machine(input_string, iterations):\n",
+    ">>     \"\"\"\n",
+    ">>     Takes input_string and generates a new string with -'s and *'s\n",
+    ">>     corresponding to characters that have identical adjacent characters\n",
+    ">>     or not, respectively.  Iterates through this procedure with the resultant\n",
+    ">>     strings for the supplied number of iterations.\n",
+    ">>     \"\"\"\n",
+    ">>     print(input_string)\n",
+    ">>     old = input_string\n",
+    ">>     for i in range(iterations):\n",
+    ">>         new = ''\n",
+    ">>         # iterate through characters in previous string\n",
+    ">>         for j in range(len(s)):\n",
+    ">>             left = j-1\n",
+    ">>             right = (j+1)%len(s) # ensure right index wraps around\n",
+    ">>             if old[left]==old[right]:\n",
+    ">>                 new += '-'\n",
+    ">>             else:\n",
+    ">>                 new += '*'\n",
+    ">>         print(new)\n",
+    ">>         # store new string as old\n",
+    ">>         old = new\n",
+    ">>\n",
+    ">> string_machine('et cetera', 10)\n",
+    ">> ~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## Finding Neighbors\n",
     ">\n",
     "> This function is supposed to find the minimum value adjacent to \n",
@@ -242,13 +279,29 @@
     ">     if i > 0 and j < width and array[i-1, j+1] < 0: return True\n",
     ">     if i < width and j > 0 and array[i+1, j-1] < 0: return True\n",
     ">     if i < width and j < height and array[i+1, j+1] < 0: return True\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}"
+    "> ~~~"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
