--- a/2018-02-10-Tucson/Python/01-run-quit.ipynb
+++ b/2018-02-10-Tucson/Python/01-run-quit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running and Quitting\n",
+    "#Running and Quitting\n",
     "teaching: 15\n",
     "exercises: 0\n",
     "questions:\n",
