--- a/2018-02-10-Tucson/Python/01-run-quit.ipynb
+++ b/2018-02-10-Tucson/Python/01-run-quit.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "#Running and Quitting\n",
-    "teaching: 15\n",
-    "exercises: 0\n",
-    "questions:\n",
+    "Teaching: 15\n",
+    "Exercises: 0\n",
+    "Questions:\n",
     "- \"How can I run Python programs?\"\n",
-    "objectives:\n",
+    "##Objectives:\n",
     "- \"Launch the Jupyter Notebook, create new notebooks, and exit the Notebook.\"\n",
     "- \"Create Markdown cells in a notebook.\"\n",
     "- \"Create and run Python cells in a notebook.\"\n",
-    "keypoints:\n",
+    "##Keypoints:\n",
     "- \"Python programs are plain text files.\"\n",
     "- \"Use the Jupyter Notebook for editing and running Python.\"\n",
     "- \"The Notebook has Control and Edit modes.\"\n",
