--- a/2018-02-10-Tucson/Python/01-run-quit.ipynb
+++ b/2018-02-10-Tucson/Python/01-run-quit.ipynb
@@ -5,14 +5,11 @@
    "metadata": {},
    "source": [
     "#Running and Quitting\n",
-    "Teaching: 15\n",
-    "\n",
-    "Exercises: 0\n",
-    "\n",
-    "Questions:\n",
+    "**Teaching**: 15\n",
+    "**Exercises**: 0\n",
+    "**Questions**:\n",
     "- \"How can I run Python programs?\"\n",
-    "\n",
-    "##Objectives:\n",
+    "**Objectives:**\n",
     "- \"Launch the Jupyter Notebook, create new notebooks, and exit the Notebook.\"\n",
     "- \"Create Markdown cells in a notebook.\"\n",
     "- \"Create and run Python cells in a notebook.\"\n",
