--- a/2018-02-10-Tucson/Python/01-run-quit.ipynb
+++ b/2018-02-10-Tucson/Python/01-run-quit.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#Running and Quitting\n",
-    "**Teaching**: 15\n",
+    "**Teaching**: 15 min\n",
     "\n",
     "**Exercises**: 0\n",
     "\n",
